# AdventOfCodeWorkdayLeaderboard

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  makefile  package.json
data/: AOC_response.json  lambda_response.json
docs/: idea.md
docs/tickets/: AOC-1-Caching.md  AOC-2-Solutions-Upload.md  AOC-3-Hosting.md
terraform/: amaan.conf  apigateway.tf  dynamodb.tf  eventBridge.tf  lambda.tf  main.conf  main.tf  outputs.tf  s3.tf  state.tf  vars.tf
