[package]
name = "AdventOfCodeWorkdayLeaderboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "backend"
path = "packages/backend/main.rs"

[lib]
name = "backend"
path = "packages/backend/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"