[package]
name = "AdventOfCodeWorkdayLeaderboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "backend"
path = "packages/backend/main.rs"

[[bin]]
name = "cache"
path = "packages/cache/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lambda_http = { version = "0.8.3", default-features = false, features = [
    "apigw_http",
] }
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
reqwest = { version = "0.11.22", features = ["native-tls-vendored"] }
chrono = "0.4.31"
aws-config = { version= "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.2.0"